--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,3 +44,25 @@
   /* border-top-color: #17688D; */
   /* border-left-color: #17688D; */
 }
+
+/* Custom whatsapp widget styling */
+._2iWL7,
+._1bpcM {
+  position: fixed !important;
+  z-index: 10000 !important;
+}
+._2iWL7 {
+  bottom: 80px !important;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px !important;
+}
+._2rVjT {
+  padding: 10px 14px;
+}
+
+._1bpcM {
+  bottom: 0 !important;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px !important;
+  background-color: rgb(79, 206, 93) !important;
+  color: rgb(255, 255, 255) !important;
+  border: 1px rgba(0, 0, 0, 0.055) solid;
+}
