added packs advantages and disadvantages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,6 +50,7 @@
 ._1bpcM {
   position: fixed !important;
   z-index: 10000 !important;
+  right: 20px !important;
 }
 ._2iWL7 {
   bottom: 80px !important;
